Make pizzas performant

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- TODO: use script in guidelines to load css after initial render.
+Cull unnecessary css styles -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
