--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@ Cull unnecessary css styles -->
     <meta name="author" content=" FILL ME IN ">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-
     <style>
     html {
       font-size: 100%;
@@ -82,8 +80,8 @@ Cull unnecessary css styles -->
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
-    <script async src="http://www.google-analytics.com/analytics.js" async></script>
-    <script async src="js/perfmatters.js"></script>
+    <script async src="http://www.google-analytics.com/analytics.js"></script>
+    <script async src="js/perfmatters.min.js"></script>
   </head>
 
   <body>
