Fixes after code review to background pizza animation

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Cull unnecessary css styles -->
           </li>
 
           <li>
-            <img style="width: 100px;" src="/img/pizzeria_sm.jpg">
+            <img style="width: 100px;" src="img/pizzeria_sm.jpg">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
